# -_-NLP

./: .gitignore  README.md  start_linux.sh  start_windows.bat  草稿
backend/: .env.ai.example  .env.smtp.example  .env.smtp.example.bat  CMakeLists.txt
backend/config/: ai_agent_profiles.json  ai_rag_knowledge.json  dev.json
backend/docs/: api_contract.md  setup.md
backend/src/: ai_insight_agent.cc  ai_insight_agent.h  app_bootstrap.cc  app_bootstrap.h  app_routes.cc  app_routes.h  app_support.cc  app_support.h  main.cc
backend/src/routes/: dashboard_insight_routes.cc  education_routes.cc  jobs_routes.cc  matching_routes.cc  profile_routes.cc  student_employment_routes.cc  system_routes.cc
backend/tests/: README.md
db/: defense_showcase_cleanup_v1.sql  defense_showcase_seed_v1.sql  defense_showcase_verify_v1.sql  load_full_seed.sh  reset_data_oneclick.sh  schema.sql  seed_full.sql  seed_minimal.sql  testdata_cleanup_v1.sql  testdata_seed_v1.sql  testdata_verify_v1.sql  verify_full_seed.sql
docs/: architecture.md  db_replan_v0.3.md  db_table_flowchart.md  decision_board_ai_agent.md  defense_showcase_manual_v1.md  defense_simplified_flowchart.md  doc_index.md  functional_design_flowchart.md  ml_embedding_upgrade_readme.md  ordered_todo.md  ordered_todo_v0.2.md  paper_5.1.txt  refactor_todolist_v0.4.md  requirements_baseline.md  requirements_baseline_v0.4.md  student_seed_import_manual_v1.md  system_modeling_diagrams_v1.md  testdata_pack_manual_v1.md  testing_guide.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  (+2 more)
(+93 files in other folders)
